# tiago_dual_navigation

tiago_dual_2dnav/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_2dnav/config/rviz/: advanced_navigation.rviz  navigation.rviz
tiago_dual_2dnav/launch/: localization.launch  localization_amcl.launch  mapping.launch  mapping_gmapping.launch  move_base.launch  navigation.launch  rviz.launch  state_machine.launch
tiago_dual_laser_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_laser_sensors/launch/: laser.launch
tiago_dual_maps/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_rgbd_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_rgbd_sensors/launch/: rgbd_orbbec-astra.launch
tiago_maps/: package.xml
