<?xml version="1.0"?>
<package>
  <name>tiago_dual_2dnav</name>
  <version>1.1.0</version>
  <description>TiaGo Dual-specific launch files needed to run
    navigation on the TiaGo robot.</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>
  <license>Apache License 2.0</license>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pal_navigation_cfg_tiago_dual</run_depend>
  <run_depend>tiago_dual_maps</run_depend>
  <run_depend>tiago_dual_laser_sensors</run_depend>

</package>
