<?xml version="1.0"?>
<package>
  <name>tiago_dual_maps</name>
  <version>1.1.0</version>
  <description>TiaGo++-specific maps and launch files.</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>
  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
