<?xml version="1.0"?>
<package>
  <name>tiago_dual_navigation</name>
  <version>1.1.0</version>
  <description>TiaGo dual navigation metapackage</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>
  <license>BSD</license>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tiago_dual_2dnav</run_depend>
  <run_depend>tiago_dual_maps</run_depend>
  <run_depend>tiago_dual_laser_sensors</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
