<?xml version="1.0"?>
<package format="2">
  <name>tiago_dual_rgbd_sensors</name>
  <version>1.1.9</version>
  <description>tiago_dual-specific RGBD sensors launch and config files.</description>
  <maintainer email="sergio.moyano@pal-robotics.com">sergio.moyano</maintainer>
  <license>Apache License 2.0</license>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tiago_rgbd_sensors</exec_depend>
  
</package>
